--- a/Develop/package.json
+++ b/Develop/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "uuid": "^9.0.1"
+  },
+  "engines" : { 
+    "npm" : "20.9.0",
+    "node" : "10.1.0"
   }
-
 }
